--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,17 @@
+aiohttp==3.5.4
 alembic==1.0.8
+async-timeout==3.0.1
+attrs==19.1.0
 Babel==2.6.0
 blinker==1.4
+certifi==2019.3.9
+chardet==3.0.4
 Click==7.0
+dominate==2.3.5
 Flask==1.0.2
+Flask-Admin==1.5.3
 Flask-BabelEx==0.9.3
+Flask-Bootstrap==3.3.7.1
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
 Flask-Migrate==2.4.0
@@ -11,17 +19,26 @@ Flask-Principal==0.4.0
 Flask-Security==3.0.0
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
+idna==2.8
+idna-ssl==1.1.0
 itsdangerous==1.1.0
 Jinja2==2.10
 Mako==1.0.7
 MarkupSafe==1.1.1
+multidict==4.5.2
 passlib==1.7.1
+pyTelegramBotAPI==3.6.6
 python-dateutil==2.8.0
 python-editor==1.0.4
 pytz==2018.9
+requests==2.21.0
 six==1.12.0
 speaklater==1.3
 SQLAlchemy==1.3.1
+telepot==12.7
+typing-extensions==3.7.2
+urllib3==1.24.1
+visitor==0.1.3
 Werkzeug==0.14.1
 WTForms==2.2.1
-Flask-Admin==1.5.3
+yarl==1.3.0
